--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       </div>
     </div>
 
+    <div id="authors">
+      <p>Authors: Dávid Stromp, Patrik Barna | 2023-2024 | Počítačová grafika | doc. Ing. Branislav Sobota PhD. | KPI FEI TUKE</p>
+    </div>
+
     <div id="pauseMenuOverlay" class="Overlay">
       <div class="overlayMenu">
         <p>Game Paused</p>
